# SwiftLaTeX

./: .gitignore  .travis.yml  CNAME  CONTRIBUTING.md  Dockerfile  DvipdfmxEngine.js  INSTALL  LICENSE  Makefile  PdfTeXEngine.js  README  README.MD  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  abstract_auth.py  addoptiondialog.cpp  addoptiondialog.h  addtagdialog.cpp  addtagdialog.h  app.py  arraydialog.cpp  arraydialog.h  babel.config.js  blockdata.cpp  blockdata.h  browser.cpp  browser.h  config.py  configdialog.cpp  configdialog.h  configdialog.ui  configdialog_mac.ui  docker-compose.yml  documentview.cpp  documentview.h  dropbox_auth.py  dropshadowlabel.cpp  dropshadowlabel.h  (+171 more)
debian/: control  (+3 more)
pdfium/: .gitignore  .gn  AUTHORS  BUILD.gn  DEPS  OWNERS  PRESUBMIT.py  README.md  codereview.settings  pdfium.gni  pdfium.gyp  xfa.gyp
pdfium/build_gyp/: all.gyp  gyp_pdfium  gyp_pdfium.py  standalone.gypi
pdfium/build_overrides/: build.gni  pdfium.gni  v8.gni
pdfium/core/fpdfapi/: cpdf_modulemgr.cpp
pdfium/core/fpdfdoc/: clines.cpp  clines.h  cpdf_variabletext.cpp  cpvt_color.cpp  cpvt_color.h  cpvt_floatrect.h  cpvt_fontmap.cpp  cpvt_fontmap.h  cpvt_generateap.cpp  cpvt_generateap.h  cpvt_lineinfo.h  cpvt_sectioninfo.cpp  cpvt_sectioninfo.h  cpvt_wordinfo.cpp  cpvt_wordinfo.h  csection.cpp  csection.h  ctypeset.cpp  ctypeset.h  doc_action.cpp  doc_annot.cpp  doc_basic.cpp  doc_basic_unittest.cpp  doc_bookmark.cpp  doc_form.cpp  doc_formcontrol.cpp  doc_formfield.cpp  doc_link.cpp  doc_metadata.cpp  doc_ocg.cpp  doc_tagged.cpp  doc_utils.cpp  doc_utils.h  doc_viewerPreferences.cpp  doc_vt.cpp  pdf_vt.h  tagged_int.h
pdfium/core/fpdftext/: fpdf_text_int.cpp  fpdf_text_int_unittest.cpp  unicodenormalizationdata.cpp
pdfium/core/fxcrt/: cfx_retain_ptr_unittest.cpp  cfx_string_c_template.h  cfx_string_data_template.h  extension.h  fx_arabic.cpp  fx_basic_array.cpp  fx_basic_bstring.cpp  fx_basic_bstring_unittest.cpp  fx_basic_buffer.cpp  fx_basic_coords.cpp  fx_basic_gcc.cpp  fx_basic_gcc_unittest.cpp  fx_basic_list.cpp  fx_basic_maps.cpp  fx_basic_memmgr.cpp  fx_basic_memmgr_unittest.cpp  fx_basic_plex.cpp  fx_basic_utf.cpp  fx_basic_util.cpp  fx_basic_util_unittest.cpp  fx_basic_wstring.cpp  fx_basic_wstring_unittest.cpp  fx_bidi.cpp  fx_bidi.h  fx_extension.cpp  fx_extension_unittest.cpp  fx_system_unittest.cpp  fx_ucddata.cpp  fx_unicode.cpp  fx_xml_composer.cpp  fx_xml_parser.cpp  fxcrt_posix.cpp  fxcrt_posix.h  fxcrt_stream.cpp  fxcrt_windows.cpp  fxcrt_windows.h  plex.h  xml_int.h
pdfium/core/fxge/: ifx_renderdevicedriver.cpp
pdfium/fpdfsdk/: DEPS  cfx_systemhandler.cpp  cfx_systemhandler.h  fpdf_dataavail.cpp  fpdf_dataavail_embeddertest.cpp  fpdf_ext.cpp  fpdf_flatten.cpp  fpdf_progressive.cpp  fpdf_searchex.cpp  fpdf_sysfontinfo.cpp  fpdf_transformpage.cpp  fpdfdoc.cpp  fpdfdoc_embeddertest.cpp  fpdfdoc_unittest.cpp  fpdfedit_embeddertest.cpp  fpdfeditimg.cpp  fpdfeditpage.cpp  fpdfformfill.cpp  fpdfformfill_embeddertest.cpp  fpdfppo.cpp  fpdfsave.cpp  fpdfsave_embeddertest.cpp  fpdftext.cpp  fpdftext_embeddertest.cpp  fpdfview.cpp  fpdfview_c_api_test.c  fpdfview_embeddertest.cpp  fsdk_actionhandler.cpp  fsdk_annothandler.cpp  fsdk_baseannot.cpp  fsdk_baseform.cpp  fsdk_baseform_embeddertest.cpp  fsdk_mgr.cpp  fsdk_rendercontext.cpp
pdfium/fpdfsdk/formfiller/: DEPS  cba_fontmap.cpp  cffl_checkbox.cpp  cffl_checkbox.h  cffl_combobox.cpp  cffl_combobox.h  cffl_formfiller.cpp  cffl_formfiller.h  cffl_iformfiller.cpp  cffl_iformfiller.h  cffl_listbox.cpp  cffl_listbox.h  cffl_pushbutton.cpp  cffl_pushbutton.h  cffl_radiobutton.cpp  cffl_radiobutton.h  cffl_textfield.cpp  cffl_textfield.h
pdfium/fpdfsdk/fpdfxfa/: DEPS  fpdfxfa_app.cpp  fpdfxfa_doc.cpp  fpdfxfa_page.cpp  fpdfxfa_util.cpp
pdfium/fpdfsdk/fxedit/: fxet_ap.cpp  fxet_edit.cpp  fxet_list.cpp
pdfium/fpdfsdk/include/: fsdk_actionhandler.h  fsdk_annothandler.h  fsdk_baseannot.h  fsdk_baseform.h  fsdk_common.h  fsdk_define.h  fsdk_mgr.h  fsdk_rendercontext.h
pdfium/fpdfsdk/javascript/: Consts.cpp  DEPS  Document.cpp  Document.h  Field.cpp  Field.h  Icon.cpp  Icon.h  JS_Define.h  JS_EventHandler.cpp  JS_EventHandler.h  JS_GlobalData.cpp  JS_GlobalData.h  JS_Object.cpp  JS_Object.h  JS_Runtime_Stub.cpp  JS_Value.cpp  JS_Value.h  PublicMethods.cpp  PublicMethods.h  app.cpp  app.h  cjs_context.cpp  cjs_context.h  cjs_runtime.cpp  cjs_runtime.h  color.cpp  color.h  console.cpp  console.h  event.cpp  event.h  global.cpp  global.h  ijs_context.h  ijs_runtime.h  public_methods_embeddertest.cpp  report.cpp  report.h  resource.cpp  (+3 more)
pdfium/fpdfsdk/pdfwindow/: DEPS  PWL_Button.cpp  PWL_Button.h  PWL_Caret.cpp  PWL_Caret.h  PWL_ComboBox.cpp  PWL_ComboBox.h  PWL_Edit.cpp  PWL_Edit.h  PWL_EditCtrl.cpp  PWL_EditCtrl.h  PWL_FontMap.cpp  PWL_FontMap.h  PWL_Icon.cpp  PWL_Icon.h  PWL_ListBox.cpp  PWL_ListBox.h  PWL_ScrollBar.cpp  PWL_ScrollBar.h  PWL_SpecialButton.cpp  PWL_SpecialButton.h  PWL_Utils.cpp  PWL_Utils.h  PWL_Wnd.cpp  PWL_Wnd.h
pdfium/fxjs/: DEPS  cfxjse_arguments.cpp  cfxjse_class.cpp  cfxjse_context.cpp  cfxjse_isolatetracker.cpp  cfxjse_isolatetracker.h  cfxjse_runtimedata.cpp  cfxjse_runtimedata.h  cfxjse_value.cpp  fxjs_v8.cpp  fxjs_v8_embeddertest.cpp
pdfium/fxjs/include/: cfxjse_arguments.h  cfxjse_class.h  cfxjse_context.h  cfxjse_value.h  fxjs_v8.h  fxjse.h
pdfium/public/: fpdf_dataavail.h  fpdf_doc.h  fpdf_edit.h  fpdf_ext.h  fpdf_flatten.h  fpdf_formfill.h  fpdf_fwlevent.h  fpdf_ppo.h  fpdf_progressive.h  fpdf_save.h  fpdf_searchex.h  fpdf_sysfontinfo.h  fpdf_text.h  fpdf_transformpage.h  fpdfview.h
pdfium/samples/: BUILD.gn  DEPS  pdfium_test.cc  samples.gyp
pdfium/skia/: BUILD.gn  skia.gyp  skia_common.gypi  skia_gn_files.gypi  skia_library.gypi  skia_library_opts.gyp  skia_pdfium.gypi
pdfium/testing/: DEPS  SUPPRESSIONS  embedder_test.cpp  embedder_test.h  embedder_test_timer_handling_delegate.h  fx_string_testhelpers.cpp  fx_string_testhelpers.h  gmock.gyp  gtest.gyp  js_embedder_test.cpp  js_embedder_test.h  test.gni  test_support.cpp  test_support.h
pdfium/xfa/: DEPS
(+2250 files in other folders)
