# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This file contains PDFium-related build overrides.

# Build PDFium either with or without v8 support.
pdf_enable_v8_override = true

# Build PDFium either with or without XFA Forms support.
pdf_enable_xfa_override = false

# Build PDFium against skia (experimental) rather than agg.
pdf_use_skia_override = false
